# fractals

./: .gitignore  README.md  cuhackit_2022_fractal_project.nimble  debug-app.sh  nim.cfg  pyproject.toml  run-app.sh
src/: app.py  button.js  fractal.py  gallery.html  index.html  nimFractal.nim
src/fractals/: triangle.py  userInputFunc.py
src/frontend/: .gitkeep
src/static/: style.css
src/testing/: animate.py  fractal.py  nimFractal2.nim  src_fractal.py  triangle.py
src/util/: errors.py
