[tool.poetry]
name = "cuhackit-2022-fractal-project"
version = "1.0.0"
description = "Fractal project for CUhackit 2022"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7.3"
Pillow = "^9.0.0"
fastapi = "^0.73.0"
uvicorn = "^0.17.1"
gunicorn = "^20.1.0"
imageio = "^2.14.1"
pygifsicle = "^1.0.5"
nimporter = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
